<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.MainFragmentActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:background="@drawable/circle_button_background"
                android:src="@drawable/ic_arrow_back_24"/>

            <TextView
                android:id="@+id/tv_course"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/courses"
                android:layout_gravity="center"
                android:textColor="@color/white"
                style="@style/heading1"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <Button
        android:id="@+id/astronomicsButton"
        style="@style/textBig"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/bg_rounded_mustard"
        android:text="@string/astronomics"
        app:layout_constraintEnd_toStartOf="@id/chemistryButton"
        app:layout_constraintBottom_toBottomOf="@id/chemistryButton"
        app:layout_constraintTop_toTopOf="@id/chemistryButton"
        app:layout_constraintStart_toEndOf="@+id/allButton"/>

    <Button
        android:id="@+id/chemistryButton"
        style="@style/textBig"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/chemistry"
        android:background="@drawable/bg_rounded_mustard"
        app:layout_constraintStart_toEndOf="@id/astronomicsButton"
        app:layout_constraintEnd_toStartOf="@id/biologyButton"
        app:layout_constraintTop_toBottomOf="@id/appBar"/>

    <Button
        android:id="@+id/allButton"
        style="@style/textBig"
        android:textAllCaps="false"
        android:background="@drawable/bg_rounded_mustard"
        android:layout_width="45dp"
        android:layout_height="30dp"
        android:layout_marginStart="18dp"
        android:text="@string/all"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar"/>

    <Button
        android:id="@+id/geographyButton"
        style="@style/textBig"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="@drawable/bg_rounded_mustard"
        android:layout_marginStart="18dp"
        android:text="@string/geography"
        app:layout_constraintTop_toTopOf="@id/physicButton"
        app:layout_constraintBottom_toBottomOf="@id/physicButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/physicButton"/>

    <Button
        android:id="@+id/physicButton"
        style="@style/textBig"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/physics"
        android:background="@drawable/bg_rounded_mustard"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/astronomicsButton"
        app:layout_constraintEnd_toStartOf="@id/mathematicsButton"
        app:layout_constraintStart_toEndOf="@+id/geographyButton"/>

    <Button
        android:id="@+id/biologyButton"
        style="@style/textBig"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/bg_rounded_mustard"
        android:text="@string/biology"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/chemistryButton"
        app:layout_constraintStart_toEndOf="@id/chemistryButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/chemistryButton" />

    <Button
        android:id="@+id/informaticsButton"
        style="@style/textBig"
        android:textAllCaps="false"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:background="@drawable/bg_rounded_mustard"
        android:layout_marginStart="18dp"
        android:text="@string/informatics"
        app:layout_constraintTop_toTopOf="@id/earthinessButton"
        app:layout_constraintBottom_toBottomOf="@id/earthinessButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/earthinessButton"/>

    <Button
        android:id="@+id/earthinessButton"
        style="@style/textBig"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:text="@string/earthiness"
        android:background="@drawable/bg_rounded_mustard"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/physicButton"
        app:layout_constraintStart_toEndOf="@id/informaticsButton"
        app:layout_constraintEnd_toStartOf="@id/economyButton"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/mathematicsButton"
        style="@style/textBig"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:textAllCaps="false"
        android:layout_marginEnd="18dp"
        android:background="@drawable/bg_rounded_mustard"
        android:text="@string/mathematics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/physicButton"
        app:layout_constraintBottom_toBottomOf="@+id/physicButton"
        app:layout_constraintTop_toTopOf="@+id/physicButton" />

    <Button
        android:id="@+id/economyButton"
        style="@style/textBig"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:textAllCaps="false"
        android:layout_marginEnd="18dp"
        android:background="@drawable/bg_rounded_mustard"
        android:text="@string/economy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/earthinessButton"
        app:layout_constraintBottom_toBottomOf="@+id/earthinessButton"
        app:layout_constraintTop_toTopOf="@+id/earthinessButton"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/frame_container"
        app:layout_constraintTop_toBottomOf="@id/informaticsButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>