<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:elevation="1dp"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true"
    android:layout_marginBottom="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:cardCornerRadius="@dimen/normal_100"
            android:layout_marginEnd="14dp">

            <ImageView
                android:id="@+id/iv_course"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:src="@tools:sample/avatars"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginEnd="14dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_title_tryout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_text"
                    tools:text="@string/title_of_try_out"
                    style="@style/textBig"
                    android:maxLines="1"
                    android:ellipsize="end"/>

                <TextView
                    android:id="@+id/tv_course_tryout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_text"
                    tools:text="@string/astronomics"
                    android:textColor="@color/colorDarkerGrey"
                    style="@style/textMedium"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_marginTop="6dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="6dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="14dp"
                        android:layout_height="14dp"
                        android:src="@drawable/baseline_access_time_24"
                        android:layout_marginEnd="6dp"/>

                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_text"
                        tools:text="120 minutes"
                        style="@style/textReguler"
                        android:layout_marginEnd="6dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/separator"
                        android:textColor="@color/colorGrey"
                        style="@style/textReguler"
                        android:layout_marginEnd="6dp"/>

                    <TextView
                        android:id="@+id/tv_question_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_text"
                        tools:text="@string/_50_soal"
                        android:textColor="@color/colorDarkerGrey"
                        style="@style/textMedium"
                        android:maxLines="1"
                        android:ellipsize="end"/>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:layout_width="54dp"
                android:layout_height="26dp"
                android:text="@string/start"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                style="@style/textBig"
                android:background="@drawable/bg_rounded_mustard"
                android:layout_gravity="bottom"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>