<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:background="@drawable/bg_rounded_white"
        android:paddingHorizontal="50dp"
        android:paddingVertical="50dp"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apakah_kamu_yakin_untuk_menyelesaikan_soal_ini"
            android:textAlignment="center"
            style="@style/textMedium"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp" >

            <Button
                android:id="@+id/btn_done"
                android:layout_width="0dp"
                android:layout_height="33dp"
                android:layout_weight="1"
                android:background="@drawable/bg_rounded_maroon"
                android:text="@string/akhiri"
                style="@style/textReguler"
                android:textColor="@color/colorWhite"
                android:textAllCaps="false" />
            
            <View
                android:layout_width="30dp"
                android:layout_height="0dp" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="33dp"
                android:layout_weight="1"
                android:background="@drawable/bg_rounded_grey"
                android:text="@string/batal"
                style="@style/textReguler"
                android:textColor="@color/colorWhite"
                android:textAllCaps="false" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>