<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:elevation="1dp"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true"
    android:layout_marginBottom="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:cardCornerRadius="@dimen/normal_100"
            android:layout_marginEnd="14dp">

            <ImageView
                android:id="@+id/iv_course"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:src="@tools:sample/avatars"
                android:scaleType="centerCrop" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginEnd="14dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_title_course"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_text"
                    tools:text="@string/nature_of_light_waves"
                    style="@style/textBig"
                    android:maxLines="1"
                    android:ellipsize="end"/>

                <TextView
                    android:id="@+id/tv_course"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_text"
                    tools:text="@string/astronomics"
                    android:textColor="@color/colorDarkerGrey"
                    style="@style/textMedium"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_marginTop="6dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="6dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_star"
                        android:layout_marginEnd="6dp"/>

                    <TextView
                        android:id="@+id/tv_rate_course"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_text"
                        tools:text="5.0"
                        style="@style/textReguler"
                        android:layout_marginEnd="6dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/separator"
                        android:textColor="@color/colorGrey"
                        style="@style/textReguler"
                        android:layout_marginEnd="6dp"/>

                    <TextView
                        android:id="@+id/tv_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_text"
                        tools:text="@string/by_sarah_william"
                        android:textColor="@color/colorDarkerGrey"
                        style="@style/textMedium"
                        android:maxLines="1"
                        android:ellipsize="end"/>

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="10dp"
                android:layout_height="16dp"
                android:src="@drawable/icon_arrow_right"
                app:tint="@color/colorGrey" />
            
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>